2011-04-06  David Hyatt  <hyatt@apple.com>

        Reviewed by Dan Bernstein.

        https://bugs.webkit.org/show_bug.cgi?id=57916
        
        Implement an optimization to the line box tree to cull out most of the intermediate
        line boxes that can occur between the root line box and the leaves of the tree (images
        and text).

        RenderInlines now have a boolean member, m_alwaysCreateLineBoxes,
        that starts off as false. Only if it gets flipped to true will there be any line boxes
        created for that RenderInline.

        * platform/mac/fast/blockflow/text-orientation-basic-expected.txt:
        * platform/mac/fast/text/capitalize-empty-generated-string-expected.txt:

2011-04-06  MORITA Hajime  <morrita@google.com>

        Unreviewed expectations udpate for gtk port that follows r83065.

        * platform/gtk/fast/dom/HTMLProgressElement/progress-bar-value-pseudo-element-expected.txt:
        * platform/gtk/fast/dom/HTMLProgressElement/progress-element-expected.txt:

2011-04-06  Adrienne Walker  <enne@google.com>

       Unreviewed, modify Chromium test expectations from r83065.  They need
       rebaselines, but in the meantime they should fail more generally so as
       not to trip the bots.

        * platform/chromium/test_expectations.txt:

2011-04-06  Alexis Menard  <alexis.menard@openbossa.org>

        Reviewed by Benjamin Poulain.

        [Qt] Unskip some media LayoutTests.
        https://bugs.webkit.org/show_bug.cgi?id=57855

        Unskip some media tests for Qt.

        * platform/qt/Skipped:

2011-04-06  Chang Shu  <cshu@webkit.org>

        Reviewed by Darin Adler.

        WebKitTestRunner needs layoutTestController.pageNumberForElementById
        https://bugs.webkit.org/show_bug.cgi?id=42329

        Unskip passed tests.

        * platform/mac-wk2/Skipped:
        * platform/qt-wk2/Skipped:

2011-04-06  Steve Lacey  <sjl@chromium.org>

        Reviewed by Eric Carlson.
