@@ -709,9 +709,6 @@ fast/xmlhttprequest/xmlhttprequest-nonexistent-file.html
 # Fails on GTK release bots, see https://bugs.webkit.org/show_bug.cgi?id=51027
 plugins/refcount-leaks.html
 
-# Fails on GTK bots, see https://bugs.webkit.org/show_bug.cgi?id=35144
-plugins/set-status.html
-
 # Fails on 32bits Debug bot, see https://bugs.webkit.org/show_bug.cgi?id=35158
 fast/forms/restore-selection-after-layout.html
 
